Correccion de estructura del proyecto